refactor(agent): 优化计划生成与提示加载逻辑
- AgentExecutor中调用createPlan时传入完整输入和内存
- Executor中使用Arrays.asList替代List.of初始化消息列表
- 注释掉Executor中重复的loadPrompt方法实现
- Planner中重构createPlan和updatePlan方法，统一使用PromptRenderer.loadPrompt加载模板
- Planner构建消息列表逻辑调整，新增日志记录请求内容
- PromptRenderer新增静态loadPrompt方法用于加载提示模板文件
- 移除Planner中多余的导入和旧代码，提高代码整洁性